--- a/PetsLive2.0/nbproject/project.properties
+++ b/PetsLive2.0/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -40,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
