--- a/PetsLive2.0/nbproject/project.properties
+++ b/PetsLive2.0/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
